Added User Model with contraints and validates decorators

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,9 @@
 {
     "cSpell.words": [
         "Choi",
+        "dotenv",
         "kevinwjchoi",
-        "levelname"
+        "levelname",
+        "urandom"
     ]
 }
