--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,9 +2,12 @@
     "cSpell.words": [
         "Choi",
         "dotenv",
+        "Formik",
         "kevinwjchoi",
         "levelname",
+        "Nunito",
         "reduxjs",
+        "Roboto",
         "urandom"
     ]
 }
